@@ -7,6 +7,8 @@
  - binarystring::str() is no longer cached; no longer returns reference.
  - Fixed problems in Visual C++ Makefile for test suite.
  - Fixed problems with RPM packaging.
+ - Lets you check whether a prepared statement has been defined.
+ - "Varargs" prepared statements.
 3.0
  - Website is now at http://pqxx.org/ (no redirects)
  - Completely replaced cursor classes
