@@ -1,3 +1,10 @@
+2009-04-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/connection_base.hxx, include/pqxx/prepared_statement.hxx,
+ include/pqxx/transaction_base.hxx, src/connection_base.cxx,
+ src/prepared_statement.cxx, src/transasction_base.cxx,
+ test/unit/test_prepared_statement.cxx:
+  - Got varargs for prepared statements working.
+  - Let you do conn.prepared("foo").exists(), thanks Maurice Gittens.
 2009-01-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
  include/pqxx/util.hxx:
   - Use PQXXTR1, not PGSTD::tr1, thanks Eugene V. Lyubimkin
